nå fungerer scrollingen, men sliter med bilder fortsatt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,46 @@
     <string name="grayscale_pokeball_image_path">path</string>
     <string name="pokemon_list_item_image_view_description">gif/image/icon of the pokemon corresponding to list item</string>
     <string name="pokemon_list_item_image_button_description">by default it shows a grayscale pokeball and when that items pokemon is in the "catch" table it will show a colored pokeball like in the games</string>
+    <string name="genswitch">152\n
+        252\n
+        387\n
+        495\n
+        650\n
+        0
+    </string>
+    <string name="image_skip_list">4 2\n
+        7 2\n
+        10 1\n
+        13 1\n
+        16 1\n
+        19 1\n
+        20 1\n
+        21 1\n
+        26 2\n
+        27 1\n
+        42 1\n
+        43 1\n
+        45 1\n
+        46 1\n
+        65 1\n
+        66 2\n
+        81 1\n
+        85 1\n
+        86 1\n
+        95 1\n
+        98 1\n
+        112 1\n
+        113 1\n
+        116 1\n
+        119 1\n
+        120 1\n
+        124 1\n
+        128 1\n
+        130 1\n
+        131 2\n
+        151 2\n
+        0
+    </string>
     <string name="pokemons">[
         "Bulbasaur",
         "Ivysaur",
