gjort slik at databasen opprettes i bakgrunnen og at progress vises i et progressdialog view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,7 @@
         721-1
         0
     </string>
+    <string name="db_dialog">Creating and filling in the pokedex database.\n\nThis is a one-time-operation, so please be patient this one time!</string>
     <string name="pokemons">[
         "Bulbasaur",
         "Ivysaur",
