--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="button2">My Shinies</string>
     <string name="button3">Progress</string>
     <string name="button4">Random hunt suggestion</string>
-    <string name="textview">Developed by Zindre</string>
+    <string name="developer_text">Developed by Zindre</string>
     <string name="title_activity_pokedex">Pokédex</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_shinies">My Shinies</string>
