db endring og nå blir recylerviewt oppdatert hver gang det legges inn en ny pokemon i databasen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -924,4 +924,6 @@
     <string name="dialog_tag">Shiny Registration</string>
     <string name="register_dialog_title">Register Catch!</string>
     <string name="title_activity_hunt">Hunt!</string>
+    <string name="shared_preferences">prefs</string>
+    <string name="first">first</string>
 </resources>
