--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,11 @@
     <string name="large_text"/>
     <string name="colored_pokeball_image_path">path</string>
     <string name="grayscale_pokeball_image_path">path</string>
-    <string name="pokemon_list_item_image_view_description">gif/image/icon of the pokemon corresponding to list item</string>
-    <string name="pokemon_list_item_image_button_description">by default it shows a grayscale pokeball and when that items pokemon is in the "catch" table it will show a colored pokeball like in the games</string>
+    <string name="pokemon_list_item_image_view_description">gif/image/icon of the pokemon corresponding to list item
+    </string>
+    <string name="pokemon_list_item_image_button_description">by default it shows a grayscale pokeball and when that
+        items pokemon is in the "catch" table it will show a colored pokeball like in the games
+    </string>
     <string name="genswitch">
         152
         252
@@ -191,7 +194,9 @@
         721-1
         0
     </string>
-    <string name="db_dialog">Creating and filling in the pokedex database.\n\nThis is a one-time-operation, so please be patient this one time!</string>
+    <string name="db_dialog">Creating and filling in the pokedex database.\n\nThis is a one-time-operation, so please be
+        patient this one time!
+    </string>
     <string name="numbersign">#</string>
     <string name="pokemons">[
         "Bulbasaur",
@@ -930,4 +935,12 @@
     <string name="yes">Yes</string>
     <string name="shared_preferences">prefs</string>
     <string name="first">first</string>
+    <string name="register_choose_game">Choose game</string>
+    <string name="register_choose_method">Choose method</string>
+    <string name="title_tab_register">Register</string>
+    <string name="title_tab_hunting">Hunting</string>
+    <string name="button_5">Hunt</string>
+    <string name="number">number</string>
+    <string name="title_activity_register">Register</string>
+    <string name="name">name</string>
 </resources>
