--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -943,4 +943,5 @@
     <string name="number">number</string>
     <string name="title_activity_register">Register</string>
     <string name="name">name</string>
+    <string name="title_activity_catch">Catch</string>
 </resources>
